# portal-chess

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format-check.yml
include/: board.h  coord.h  piece.h  sample.h
src/: CMakeLists.txt  board.cpp  coord.cpp  main.cpp  piece.cpp  sample.cpp
test/: CMakeLists.txt  board.cpp  coord.cpp  imgui.cpp  main.cpp  piece.cpp  sample.cpp
test/gtest/: CMakeLists.txt  CMakeLists.txt.in
